# noita_modman

./: .gitignore  Cargo.toml  Config.toml  README.md  mod_settings  saved_settings
.github/workflows/: release.yml
modpacks/: a  usual
src/: app.rs  collapsing_ui.rs  conditional.rs  ext.rs  icons.rs  main.rs  mod.rs
src/app/: modpack.rs
src/app/modpack/: modsettings.rs
src/mod/: conditional.rs
