[package]
name = "noita_modman"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytemuck = "1.21.0"
eframe = "0.31.0"
egui = "0.31.0"
egui_extras = "0.31.0"
fastlz = "0.1.0"
git2 = "0.20.0"
pprof =  { version = "0.14", features = ["flamegraph"], optional = true }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde = {version = "1.0.219", features = ["derive"]}
toml = "0.8.23"
xmltree = "0.11.0"

[features]
profiler = ["dep:pprof"]
